Update ALL THE THINGS
Update Java version to 17
Update Groovy version to 4.0.6
Update Neo4j to version 5.1.0
Update Micronaut to version 3.7.3
Update Redis to version 4.3

Remove dodgy test that broke with JVM version upgrade. It wasn't testing anything super useful, so no big loss there.